--- a/themes/default/resources/css/default.css
+++ b/themes/default/resources/css/default.css
@@ -35,11 +35,23 @@ h4 {
 body > header {
   background-color: #4679bd;
   padding: 1rem;
+  height: 2rem;
 }
 body > header > a > h1 {
   margin: 0;
   color: white;
   font-weight: 100;
+  float: left;
+  line-height: 2rem;
+}
+body > header > form.search {
+  float: right;
+}
+body > header > form.search > input[type=submit] {
+  font-family: FontAwesome;
+  display: inline;
+  line-height: 1.6rem;
+  min-width: 4em;
 }
 
 body > footer {
@@ -82,18 +94,16 @@ main > article > header > h1 {
   margin: 0;
   color: #999;
   font-size: 1.1rem;
+  line-height: 2rem;
 }
 
-main.collection > header.object,
-main.object > header.object,
+main > header.object,
 article.object > header.object {
   text-align: right;
 }
-main.collection > header.object h1,
-main.object > header.object h1,
+main > header.object h1,
 article.object > header.object h1 {
   float: left;
-  line-height: 2rem;
 }
 
 header.object > nav.crud > ul,
