--- a/themes/default/resources/css/default.css
+++ b/themes/default/resources/css/default.css
@@ -79,7 +79,7 @@ main > article > .body {
 }
 main > footer,
 main > article > footer {
-  margin: 2em 0;
+  margin: 2em 0 6em 0;
   padding: 0 1em;
 }
 
