--- a/themes/default/resources/css/default.css
+++ b/themes/default/resources/css/default.css
@@ -154,19 +154,8 @@ dl.object-properties > dd + dt {
   margin-top: 2em;
 }
 
-ul.multivalue {
-  padding: 0;
-  list-style: none;
-}
 ul.multivalue > li {
   margin: 0.6em 0;
-}
-
-dd.multivalue > ul.multivalue > li {
-  background-color: #ddd;
-  display: inline-block;
-  padding: 0.2em 0.4em;
-  font-size: 0.8em;
 }
 
 dd.type-image img,
@@ -181,9 +170,9 @@ form.object img + input[type=checkbox] {
   vertical-align: top;
 }
 
-dd.type-image.multivalue > ul.multivalue > li {
+dd.type-image.multivalue > ul.multivalue {
+  list-style: none;
   padding: 0;
-  background: white;
 }
 dd.type-image.multivalue > ul.multivalue > li > a > img {
   display: block;
